--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <script src="app.js"></script>
 
-    <link href="TicTacToe.css" rel="stylesheet">
+    <link href="ticTacToe.css" rel="stylesheet">
   </head>
 
 
