--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Shooter</title>
+    <title>"ZombieFace"_Shooter_Game</title>
     <script src="jquery-2.2.0.min.js" type="text/javascript"></script>
     <script src="Velocity.js"></script>
 
