--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Shooter</title>
+    <title>Animated_Shooter</title>
     <script src="jquery-2.2.0.min.js" type="text/javascript"></script>
     <script src="Velocity.js"></script>
 
     <script src="app.js"></script>
 
-    <link href="TicTacToe.css" rel="stylesheet">
+    <link href="zombieFace.css" rel="stylesheet">
   </head>
 
 
