day5of6 commit -status: cleaning up code today

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
        <!-- <p>TARGET <br>Test_One<br> click to score</p></div> -->
   </div>
 
-  <div class='enemy' id='a2'><img src="zombieFace.png"></div>
+  <div class='enemy' id='a2'><img src="zombieFace.png">
+    <audio class="zombieYell" autoplay src="sound/zombieYell.mp3"></audio>
+  </div>
   <div class='enemy' id='a3'><img src="zombieFace.png"></div>
   <div class='enemy' id='a4'><img src="zombieFace.png"></div>
   <div class='enemy' id='a5'><img src="zombieFace.png"></div>
@@ -54,7 +56,7 @@
     </div>
 
     <div class="rsMenu" id="gameMsg">gameMsg Box
-      <p> When you hit start you have 30 secounds to hit the targets</p>
+      <p> When you hit start you have 3 secounds to hit the targets</p>
     </div>
 
 
