--- a/index.html
+++ b/index.html
@@ -2,85 +2,38 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Animated_Shooter</title>
-    <script src="jquery-2.2.0.min.js" type="text/javascript"></script>
-    <script src="Velocity.js"></script>
-
-    <script src="app.js"></script>
-
-    <link href="zombieFace.css" rel="stylesheet">
-    <!--  -->
+    <title>zombieFace_Ver1.00.1</title>
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/zombieFace.css" rel="stylesheet">
+    <script src="js/jquery-2.2.0.min.js" type="text/javascript"></script>
+    <script src="js/Velocity.js"></script>
+    <script src="js/app.js"></script>
   </head>
-
-
-
   <body>
     <div id="wrapper">
-
-
-
-    <!-- <h1 id= mainTitle>"game message here" </h1> -->
-
-
-<!-- <br/>
-<br/> -->
-
-<div class='cover'></div>
-  <div id = "mainScreen">
-    <div class='enemy' id='a1'>
-      <img src="zombieFace.png">
-       <!-- <p>TARGET <br>Test_One<br> click to score</p></div> -->
-  </div>
-
-  <div class='enemy' id='a2'><img src="zombieFace.png">
-    <audio class="zombieYell" autoplay src="sound/zombieYell.mp3"></audio>
-  </div>
-  <div class='enemy' id='a3'><img src="zombieFace.png"></div>
-  <div class='enemy' id='a4'><img src="zombieFace.png"></div>
-  <div class='enemy' id='a5'><img src="zombieFace.png"></div>
-  <div class='enemy' id='a6'><img src="zombieFace.png"></div>
-  <div class='enemy' id='a7'><img src="zombieFace.png"></div>
-  <div class='enemy' id='a8'><img src="zombieFace.png"></div>
-  <div class='enemy' id='a9'><img src="zombieFace.png"></div>
-  <div class='enemy' id='a10'><img src="zombieFace.png"></div>
-
+      <div class='cover'></div> <!-- Hides targets before games starts -->        
+      <div id = "mainScreen">
+        <div class='enemy' id='a1'><img src="images/zombieFace.png"></div>
+        <div class='enemy' id='a2'><img src="images/zombieFace.png"></div>
+        <div class='enemy' id='a3'><img src="images/zombieFace.png"></div>
+        <div class='enemy' id='a4'><img src="images/zombieFace.png"></div>
+        <div class='enemy' id='a5'><img src="images/zombieFace.png"></div>
+        <div class='enemy' id='a6'><img src="images/zombieFace.png"></div>
+        <div class='enemy' id='a7'><img src="images/zombieFace.png"></div>
+        <div class='enemy' id='a8'><img src="images/zombieFace.png"></div>
+        <div class='enemy' id='a9'><img src="images/zombieFace.png"></div>
+        <div class='enemy' id='a10'><img src="images/zombieFace.png"></div>
+        <audio class="zombieYell" autoplay src="sounds/zombieYell.mp3"></audio> <!-- will play on load of page for dramatic effect -->     
 <!-- end of MAIN SCREEN tag -->
-  <div id = "rightSide">
-    <div class="rsMenu" id="timer"> timer
-      <h1>00:00</h1>
-    </div>
-    <div class="rsMenu" id="score">
-      Score
-      <h1>0</h1>
-
-    </div>
-
-    <div class="rsMenu" id="gameMsg">gameMsg Box
-      <p> When you hit start you have 3 secounds to hit the targets</p>
-    </div>
-
-
-    <div class="rsMenu" id="playerUp">playerUp
-      <p class='info'> . . . </p>
-
-    </div>
-
-    <div class="rsMenu" id="start">Press Start Below To Begain.
-      <button id = "startGame" type="button" name="button">Start Game</button>
-    </div>
-
-  </div>
-
-</div>
-
-
+      <div id = "rightSide">
+        <div class="rsMenu" id="timer">Timer<h1>00:00</h1></div>
+        <div class="rsMenu" id="score">Score<h1>0</h1></div>
+        <div class="rsMenu" id="gameMsg">Game Msg Box<p> You have <br>3 seconds<br>to hit the targets</p></div>
+        <div class="rsMenu" id="playerUp">Player Up<p class='info'> . . . </p></div>
+        <div class="rsMenu" id="start">Press Start Below To Begain.
+          <button id = "startGame" class="hvr-pulse" type="button" name="button">Start   Game</button><!--<button id = "restartGame" type="button" name="button">Restart Game</button>--></div>
+      </div><!-- close rightSide --> 
+      </div><!-- close mainScreen --> 
+    </div><!-- close wrapper -->     
   </body>
-
-
-
-
-
-
-
-
 </html>
