update -added game title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="wrapper">
-      <div class='cover'></div> <!-- Hides targets before games starts -->        
+      <div class='cover' > <div id='gameTitle'>zombieFace</div> </div> <!-- Hides targets before games starts -->        
       <div id = "mainScreen">
         <div class='enemy' id='a1'><img src="images/zombieFace.png"></div>
         <div class='enemy' id='a2'><img src="images/zombieFace.png"></div>
