--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <div class='enemy' id='a9'><img src="images/zombieFace.png"></div>
         <div class='enemy' id='a10'><img src="images/zombieFace.png"></div>
         <audio class="zombieYell" autoplay src="sounds/zombieYell.mp3"></audio> <!-- will play on load of page for dramatic effect -->     
+        <audio class="gun"  src="sounds/gun_44_magnum.mp3"></audio>
 <!-- end of MAIN SCREEN tag -->
       <div id = "rightSide">
         <div class="rsMenu" id="timer">Timer<h1>00:00</h1></div>
@@ -31,7 +32,9 @@
         <div class="rsMenu" id="gameMsg">Game Msg Box<p> You have <br>3 seconds<br>to hit the targets</p></div>
         <div class="rsMenu" id="playerUp">Player Up<p class='info'> . . . </p></div>
         <div class="rsMenu" id="start">Press Start Below To Begain.
-          <button id = "startGame" class="hvr-pulse" type="button" name="button">Start   Game</button><!--<button id = "restartGame" type="button" name="button">Restart Game</button>--></div>
+          <button id = "startGame"  class="hvr-pulse" type="button" name="button">Start   Game</button>
+          <button id = "restartGame" class='reStartButton'type="button" name="button">Restart Game</button>
+        </div>
       </div><!-- close rightSide --> 
       </div><!-- close mainScreen --> 
     </div><!-- close wrapper -->     
